crates/wadl-engine/tests/snapshots/golden_rule_table__R03-0-an-inspection-in-the-coated-space.snap
---
source: crates/wadl-engine/tests/golden_rule_table.rs
description: an inspection in the coated space
info:
  rule: R03
  ordinal: "0"
  scenario: an inspection in the coated space
  hazard_kind: coating_open
  origin: 3-160-2-Q
  subject: 3-160-2-Q
  work_type: inspection
  at_min: 0
  ended_min: ~
  expect_state: ALLOW
  expect_clearer: ""
  expect_clear_min: ~
---
{
  "state": "ALLOW",
  "trace": [],
  "earliest_clear": null
}
