crates/wadl-engine/tests/snapshots/golden_rule_table__R03-1-hot-work-on-the-deck-above.snap
---
source: crates/wadl-engine/tests/golden_rule_table.rs
description: hot work on the deck above
info:
  rule: R03
  ordinal: "1"
  scenario: hot work on the deck above
  hazard_kind: coating_open
  origin: 3-160-2-Q
  subject: 2-160-2-Q
  work_type: hot_work
  at_min: 0
  ended_min: ~
  expect_state: BLOCK
  expect_clearer: marine_chemist
  expect_clear_min: 480
---
{
  "state": "BLOCK",
  "trace": [
    {
      "rule_code": "R03",
      "rule_version": "00000000-0000-0000-0000-000000000301",
      "state": "BLOCK",
      "source": "3-160-2-Q",
      "hazard": "CT-3160-4 · final coat, curing",
      "depth": 1,
      "path": [
        "3-160-2-Q",
        "2-160-2-Q"
      ],
      "via": [
        "deck_penetration"
      ],
      "authority": "NSTM Ch. 074 Vol. 1; NFPA 306",
      "clearing_authority": "marine_chemist",
      "earliest_clear": 1778678100000,
      "reason": "CT-3160-4 · final coat, curing in 3-160-2-Q — reached via deck_penetration (1 hop)."
    }
  ],
  "earliest_clear": 1778678100000
}
