crates/wadl-engine/tests/snapshots/golden_rule_table__R04-0-any-work-below-live-hot-work-at-45-min.snap
---
source: crates/wadl-engine/tests/golden_rule_table.rs
description: any work below live hot work at 45 min
info:
  rule: R04
  ordinal: "0"
  scenario: any work below live hot work at 45 min
  hazard_kind: hot_work_live
  origin: 2-160-2-Q
  subject: 3-160-2-Q
  work_type: mechanical
  at_min: 45
  ended_min: ~
  expect_state: SUSPEND
  expect_clearer: fire_marshal
  expect_clear_min: ~
---
{
  "state": "SUSPEND",
  "trace": [
    {
      "rule_code": "R04",
      "rule_version": "00000000-0000-0000-0000-000000000402",
      "state": "SUSPEND",
      "source": "2-160-2-Q",
      "hazard": "HW permit 2673 · weld repair",
      "depth": 1,
      "path": [
        "2-160-2-Q",
        "3-160-2-Q"
      ],
      "via": [
        "deck_penetration"
      ],
      "authority": "NSTM Ch. 074 Vol.1 para 074-13; MIL-STD-1689A",
      "clearing_authority": "fire_marshal",
      "earliest_clear": null,
      "reason": "HW permit 2673 · weld repair in 2-160-2-Q — reached via deck_penetration (1 hop); fire watch of 30 min starts when the permit closes."
    }
  ],
  "earliest_clear": null
}
