crates/wadl-engine/tests/snapshots/golden_rule_table__R04-0-the-same-once-the-fire-watch-has-run.snap
---
source: crates/wadl-engine/tests/golden_rule_table.rs
description: the same once the fire watch has run
info:
  rule: R04
  ordinal: "0"
  scenario: the same once the fire watch has run
  hazard_kind: hot_work_live
  origin: 2-160-2-Q
  subject: 3-160-2-Q
  work_type: mechanical
  at_min: 90
  ended_min: 60
  expect_state: ALLOW
  expect_clearer: ""
  expect_clear_min: ~
---
{
  "state": "ALLOW",
  "trace": [],
  "earliest_clear": null
}
