crates/wadl-engine/tests/snapshots/golden_rule_table__R07-0-an-inspection-inside-the-envelope.snap
---
source: crates/wadl-engine/tests/golden_rule_table.rs
description: an inspection inside the envelope
info:
  rule: R07
  ordinal: "0"
  scenario: an inspection inside the envelope
  hazard_kind: energised_bus
  origin: 3-148-2-E
  subject: 3-148-2-E
  work_type: inspection
  at_min: 0
  ended_min: ~
  expect_state: BLOCK
  expect_clearer: isolation_authority
  expect_clear_min: ~
---
{
  "state": "BLOCK",
  "trace": [
    {
      "rule_code": "R07",
      "rule_version": "00000000-0000-0000-0000-000000000700",
      "state": "BLOCK",
      "source": "3-148-2-E",
      "hazard": "Bus 3-SG-2 energised",
      "depth": 0,
      "path": [
        "3-148-2-E"
      ],
      "via": [],
      "authority": "NSTM Ch. 300; NAVSEA S9086-KC-STM-010",
      "clearing_authority": "isolation_authority",
      "earliest_clear": null,
      "reason": "Bus 3-SG-2 energised in this space."
    }
  ],
  "earliest_clear": null
}
